--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -12,7 +12,7 @@
     {% block content %}{% endblock %}
     <script src="{% static '/js/modules/axios.min.js' %}"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-    <script src="{% static '/js/tailwind.js' %}"></script>
+    <script src="{% static '/js/modules/tailwind.js' %}"></script>
 </body>
 
 </html>
