--- a/app/templates/slots.html
+++ b/app/templates/slots.html
@@ -24,11 +24,12 @@
                     </button>
                 </div>
                 <form class="p-4 md:p-5" onsubmit="handleSubmit(event)">
-                    <input type="text" class="hidden" name="id" id="id">
+                        <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+                        <input type="text" class="hidden" name="id" id="id">
                     <div class="grid gap-4 mb-4 grid-cols-2">
                         <div class="col-span-2 sm:col-span-1">
-                            <label for="slotId" class="block mb-2 text-sm font-medium text-gray-900">Slot Id</label>
-                            <input type="text" name="slotId" id="slotId"
+                            <label for="slot_id" class="block mb-2 text-sm font-medium text-gray-900">Slot Id</label>
+                            <input type="text" name="slot_id" id="slot_id"
                                 class="border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 focus:outline-none"
                                 placeholder="" required>
                         </div>
@@ -73,15 +74,15 @@
                 {% for slot in slots %}
                 <tr class="bg-white border-b hover:bg-gray-50 hover:cursor-pointer group" data-slot-id="{{ slot.id }}"
                     onclick="editSlot('{{ slot.id }}')">
-                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">{{slot.slotId}}</th>
+                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">{{slot.slot_id}}</th>
                     <td class="px-6 py-4">{{slot.floor}}</td>
-                    {% if slot.isAvailable %}
+                    {% if slot.is_available %}
                     <td class="px-6 py-4">Available</td>
                     {% else %}
                     <td class="px-6 py-4">Occupied</td>
                     {% endif %}
-                    <td class="px-6 py-4 relative date-time" data-datetime="{{ slot.createdAt }}">
-                        <span class="formatted-date">{{ slot.createdAt }}</span>
+                    <td class="px-6 py-4 relative date-time" data-datetime="{{ slot.created_at }}">
+                        <span class="formatted-date">{{ slot.created_at }}</span>
                         <span class="cancel-icon hidden group-hover:inline-block absolute right-1">
                             <svg onclick="deleteSlot('{{ slot.id }}', event)"
                                 class="w-4 h-4 text-red-500 hover:text-red-700 cursor-pointer" fill="none"
@@ -110,36 +111,22 @@
 
 <script src="{% static '/js/slots.js' %}"></script>
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        document.querySelectorAll(".date-time").forEach(el => {
-            const isoDate = el.dataset.datetime;
-            const date = new Date(isoDate);
-            const formattedTime = date.toLocaleTimeString("en-GB", { hour: "2-digit", minute: "2-digit" }).replace(":", "") + "HR";
-            const formattedDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()}`;
-            const dateSpan = el.querySelector(".formatted-date");
-            if (dateSpan) {
-                dateSpan.textContent = `${formattedTime} ${formattedDate}`;
-            }
-        });
-    });
-</script>
-<script>
     const handleSubmit = async (event) => {
         event.preventDefault();
-        const token = localStorage.getItem("smartPToken");
+        const csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
         const id = document.getElementById('id').value;
         const formData = {
-            slotId: document.getElementById('slotId').value,
+            slot_id: document.getElementById('slot_id').value,
             floor: document.getElementById('floor').value,
         };
         const res = id != "" ?
             await axios.put(`/slot/${id}`, formData, {
                 headers: {
-                    Authorization: `Bearer ${token}`,
+                    'X-CSRFToken': csrfToken
                 }
             }) : await axios.post('/slots', formData, {
                 headers: {
-                    Authorization: `Bearer ${token}`,
+                    'X-CSRFToken': csrfToken
                 }
             })
         alert(res.data.message)
@@ -156,7 +143,7 @@
         modal.classList.toggle('flex');
         document.getElementById("formLabel").innerText = "Update Slot"
         document.getElementById('id').value = slotDetails.id
-        document.getElementById('slotId').value = slotDetails.slotId
+        document.getElementById('slot_id').value = slotDetails.slot_id
         let floorSelect = document.getElementById('floor');
         floorSelect.value = slotDetails.floor;
     }
