--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block title %}Brendah{% endblock %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <div class="w-full h-screen flex">
+
     <div id="crud-modal" tabindex="-1" aria-hidden="true"
         class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full max-h-full bg-[rgba(0,0,0,0.5)]">
         <div class="relative p-4 w-full max-w-md max-h-full">
@@ -38,7 +40,7 @@
                                 class="border border-gray-300 text-gray-900 bg-white text-sm rounded-lg block w-full p-2.5 focus:outline-none">
                                 <option selected="">Select Parking Slot</option>
                                 {% for slot in slots %}
-                                    <option value="{{slot.id}}">{{slot.slot_id}}</option>
+                                <option value="{{slot.id}}">{{slot.slot_id}}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -64,33 +66,44 @@
 
     <div class="w-1/6 p-5 grid items-end relative">
         <div class="absolute top-5 right-5 bg-red-500">
-            <button id="user-menu-button" class="absolute top-1 right-5 flex items-center space-x-2 text-gray-900 focus:outline-none">
+            <button id="user-menu-button"
+                class="absolute top-1 right-5 flex items-center space-x-2 text-gray-900 focus:outline-none">
                 <svg width="2rem" height="2rem" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <g id="Layer_2" data-name="Layer 2">
-                      <g id="invisible_box" data-name="invisible box">
-                        <rect width="48" height="48" fill="none"/>
-                      </g>
-                      <g id="icons_Q2" data-name="icons Q2">
-                        <g>
-                          <path d="M24,10a8,8,0,1,0,8,8A8,8,0,0,0,24,10Zm0,12a4,4,0,1,1,4-4A4,4,0,0,1,24,22Z"/>
-                          <path d="M24,2A22,22,0,1,0,46,24,21.9,21.9,0,0,0,24,2ZM11.8,37.2A26.4,26.4,0,0,1,24,34a26.4,26.4,0,0,1,12.2,3.2,17.9,17.9,0,0,1-24.4,0Zm27.1-3.1h0A30.7,30.7,0,0,0,24,30,30.7,30.7,0,0,0,9.1,34.1h0A17.7,17.7,0,0,1,6,24a18,18,0,0,1,36,0,17.7,17.7,0,0,1-3.1,10.1Z"/>
+                        <g id="invisible_box" data-name="invisible box">
+                            <rect width="48" height="48" fill="none" />
                         </g>
-                      </g>
+                        <g id="icons_Q2" data-name="icons Q2">
+                            <g>
+                                <path d="M24,10a8,8,0,1,0,8,8A8,8,0,0,0,24,10Zm0,12a4,4,0,1,1,4-4A4,4,0,0,1,24,22Z" />
+                                <path
+                                    d="M24,2A22,22,0,1,0,46,24,21.9,21.9,0,0,0,24,2ZM11.8,37.2A26.4,26.4,0,0,1,24,34a26.4,26.4,0,0,1,12.2,3.2,17.9,17.9,0,0,1-24.4,0Zm27.1-3.1h0A30.7,30.7,0,0,0,24,30,30.7,30.7,0,0,0,9.1,34.1h0A17.7,17.7,0,0,1,6,24a18,18,0,0,1,36,0,17.7,17.7,0,0,1-3.1,10.1Z" />
+                            </g>
+                        </g>
                     </g>
-                  </svg>
+                </svg>
             </button>
-            
-            <div id="user-dropdown" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg border border-gray-200">
+
+            <div id="user-dropdown"
+                class="hidden absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg border border-gray-200">
                 <div class="p-3">
                     <p class="text-sm font-medium text-gray-900">{{ user.username }}</p>
-                    <p class="text-xs text-gray-600">{{ user.last_name }}  {{ user.first_name }}</p>
+                    <p class="text-xs text-gray-600">{{ user.last_name }} {{ user.first_name }}</p>
                     <p class="text-xs text-gray-600">{{ user.email }}</p>
                     <p class="text-xs text-gray-600">{{ user.phone }}</p>
-                    <p class="text-xs text-gray-600">{{ user.gender }}</p>
+                    <p class="text-xs text-gray-600 capitalize">{{ user.gender }}</p>
                 </div>
-                <div class="border-t border-gray-200">
-                    <a href="/logout" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100">Logout</a>
-                </div>
+                <div class="border-t border-gray-200 flex gap-5"></div>
+                <a href="/logout"
+                    class="block px-4 py-2 text-sm text-red-600 hover:bg-red-100 hover:text-[#121212] flex items-center space-x-2">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 11-6 0v-1m6-10V4a3 3 0 10-6 0v1">
+                        </path>
+                    </svg>
+                    <span>Logout</span>
+                </a>
             </div>
         </div>
         <div class="grid gap-3">
@@ -99,14 +112,14 @@
                 Manual Assign
             </button>
             {% if isAdmin %}
-                <a href="/users"
-                    class="text-center text-white bg-blue-700 font-medium text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none">
-                    Manage Users
-                </a>
-                <a href="/slots"
-                    class="text-center text-white bg-blue-700 font-medium text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none">
-                    Manage Slots
-                </a>
+            <a href="/users"
+                class="text-center text-white bg-blue-700 font-medium text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none">
+                Manage Users
+            </a>
+            <a href="/slots"
+                class="text-center text-white bg-blue-700 font-medium text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none">
+                Manage Slots
+            </a>
             {% endif %}
             <a href="/parking"
                 class="text-center text-white bg-blue-700 font-medium text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none">
@@ -117,6 +130,7 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="{% static '/js/index.js' %}"></script>
 <script>
     document.getElementById("user-menu-button").addEventListener("click", function () {
@@ -131,6 +145,44 @@
             dropdown.classList.add("hidden");
         }
     });
+</script>
+<script>
+    const socket = new WebSocket("ws://localhost:8000/ws/updates/");
+
+    function showToast(message) {
+        Toastify({
+            text: message,
+            duration: 5000,
+            close: true,
+            gravity: "top",
+            position: "right",
+            backgroundColor: "#22c55e",
+            stopOnFocus: true,
+        }).showToast();
+    }
+
+    socket.onopen = function () {
+        console.log("WebSocket connected");
+    };
+
+    socket.onmessage = function (event) {
+        const data = JSON.parse(event.data);
+        showToast(data.message)
+    };
+
+    socket.onerror = function (error) {
+        console.error("WebSocket Error:", error);
+    };
+
+    socket.onclose = function () {
+        console.log("WebSocket closed");
+    };
+
+    function sendMessage() {
+        const messageInput = document.getElementById("messageInput");
+        socket.send(JSON.stringify({ message: messageInput.value }));
+        messageInput.value = "";
+    }
 </script>
 
 {% endblock %}
