feat(socket) added a web socket for real time updates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 {% load static %}
-{% block title %}Brendah{% endblock %}
+{% block title %}Smart Parking{% endblock %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <div class="w-full h-screen flex">
