--- a/app/templates/parking.html
+++ b/app/templates/parking.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 {% load static %}
-{% block title %}View Slots{% endblock %}
+{% block title %}View Parking Allocations{% endblock %}
 {% block content %}
 
 <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
